--- a/src/components/Task.scss
+++ b/src/components/Task.scss
@@ -1,34 +1,40 @@
 @import "../main.scss";
 
 .task {
-  background: white;
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
   width: 20rem;
   height: 6rem;
-  align-items: center;
   border: 1px dashed #dbdbdb;
   border-radius: 1rem;
   padding: 0.5rem;
   margin: 1rem 0;
-  position: relative;
-  .image {
-    width: 6rem;
-    img {
-      width: 100%;
+
+  .task-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .image {
+      width: 6rem;
+      height: 5rem;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    p {
+      margin-right: 0.5rem;
+      font-size: 1rem;
+      font-weight: 600;
     }
   }
 
-  p {
-    margin-right: 0.5rem;
-    font-size: 1rem;
-    font-weight: 600;
-  }
-
   .icon {
-    width: 1.5rem;
-    position: absolute;
-    top: 2rem;
-    left: 1rem;
+    width: 1rem;
+    margin-left: 1rem;
     img {
       width: 100%;
     }
