--- a/src/components/TaskState.scss
+++ b/src/components/TaskState.scss
@@ -1,10 +1,37 @@
 @import "../main.scss";
 
+.backlog {
+  .state-title {
+    background: $light-gray;
+  }
+  h3 {
+    color: $dark-gray;
+  }
+}
+
+.in-progress {
+  .state-title {
+    background: $light-orange;
+  }
+  h3 {
+    color: $dark-orange;
+  }
+}
+
+.completed {
+  .state-title {
+    background: $light-green;
+  }
+  h3 {
+    color: $dark-green;
+  }
+}
+
 .state {
   background: white;
   box-shadow: 0px 2px 15px -2px rgb(185 187 198 / 50%);
   border-radius: 1rem;
-  width: 22rem;
+  width: 25rem;
   height: 30rem;
   margin: 1rem;
   padding: 1rem;
@@ -20,34 +47,16 @@
       font-size: 1rem;
     }
   }
-}
+  .state-content {
+    margin: 0 1rem;
+    height: 25rem;
+    overflow-y: scroll;
+    scrollbar-width: thin;
 
-.backlog {
-  .state-title {
-    background: $light-gray;
-  }
-
-  h3 {
-    color: $dark-gray;
-  }
-}
-
-.in-progress {
-  .state-title {
-    background: $light-orange;
-  }
-
-  h3 {
-    color: $dark-orange;
-  }
-}
-
-.completed {
-  .state-title {
-    background: $light-green;
-  }
-
-  h3 {
-    color: $dark-green;
+    span {
+      font-size: 1rem;
+      color: $dark-gray;
+    }
+    margin: 1rem 0;
   }
 }
