--- a/src/components/TasksList.scss
+++ b/src/components/TasksList.scss
@@ -2,31 +2,35 @@
 
 .task-list {
   position: absolute;
-  background-color: gray;
-  background-image: url("../assets/images/flowers.png");
+  background-color: rgb(218, 217, 217);
   width: 25rem;
   border-radius: 1rem;
   margin-top: 1rem;
   height: 30rem;
   z-index: 10;
 
-  .icon-close {
-    width: 2rem;
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    img {
-      width: 100%;
+  .task-list-heading {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 2rem 1rem 2rem;
+    h3 {
+      font-size: 1.2rem;
+    }
+
+    .icon-close {
+      width: 1rem;
+
+      img {
+        width: 100%;
+      }
     }
   }
 
-  h3 {
-    font-size: 1.2rem;
-    margin: 1rem;
-  }
-
   .tasks {
-    height: 25rem;
+    margin: 0 1rem;
+    height: 22rem;
     overflow-y: scroll;
     scrollbar-width: thin;
   }
