--- a/src/main.scss
+++ b/src/main.scss
@@ -13,6 +13,7 @@ body {
 
 $main-blue-color: #45b7d2;
 $main-blue-color-light: #cce9ef;
+$main-gray: #dbdbdb;
 
 $primary-color: #040a2f;
 $primary-light-color: #1e275b;
@@ -29,3 +30,4 @@ $dark-green: #22543d;
 $light-green: #c6f6d5;
 
 $box-shadow: -22px -4px 8px rgba(0, 0, 0, 0.03);
+
