--- a/src/components/Task.scss
+++ b/src/components/Task.scss
@@ -6,12 +6,33 @@
   align-items: center;
   justify-content: space-between;
   background: white;
+  position: relative;
   width: 20rem;
   height: 6rem;
   border: 1px dashed #dbdbdb;
   border-radius: 1rem;
   padding: 0.5rem;
   margin: 1rem 0;
+
+  &:hover {
+    .icon-close {
+      display: initial;
+    }
+  }
+
+  .icon-close {
+    width: 0.6rem;
+    top: 5px;
+    right: 7px;
+    position: absolute;
+    display: none;
+    filter: invert(99%) sepia(1%) saturate(1152%) hue-rotate(309deg)
+      brightness(93%) contrast(86%);
+
+    img {
+      width: 100%;
+    }
+  }
 
   .task-content {
     display: flex;
@@ -33,10 +54,19 @@
   }
 
   .icon {
-    width: 1rem;
+    width: 1.5rem;
     margin-left: 1rem;
+
     img {
       width: 100%;
     }
+  }
+  .done-icon {
+    filter: invert(30%) sepia(21%) saturate(933%) hue-rotate(100deg)
+      brightness(88%) contrast(96%);
+  }
+  .pending-icon {
+    filter: invert(47%) sepia(80%) saturate(2146%) hue-rotate(358deg)
+      brightness(99%) contrast(110%);
   }
 }
