--- a/src/components/TasksList.scss
+++ b/src/components/TasksList.scss
@@ -2,7 +2,9 @@
 
 .task-list {
   position: absolute;
-  background-color: rgb(218, 217, 217);
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px,
+    rgb(209, 213, 219) 0px 0px 0px 1px inset;
   width: 25rem;
   border-radius: 1rem;
   margin-top: 1rem;
