--- a/src/pages/Douaa.scss
+++ b/src/pages/Douaa.scss
@@ -42,3 +42,15 @@
     justify-content: center;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .douaa {
+    .douaa-heading {
+      width: 30rem;
+      flex-direction: column-reverse;
+      .image {
+        width: 10rem;
+      }
+    }
+  }
+}
