--- a/src/main.scss
+++ b/src/main.scss
@@ -29,5 +29,7 @@ $light-orange: #fde3c5;
 $dark-green: #22543d;
 $light-green: #c6f6d5;
 
-$box-shadow: -22px -4px 8px rgba(0, 0, 0, 0.03);
+$error-dark-color: #f56161;
+$error-light-color: #f6c4c4d4;
 
+$box-shadow: -22px -4px 8px rgba(0, 0, 0, 0.03);
