--- a/src/components/Task.scss
+++ b/src/components/Task.scss
@@ -61,6 +61,9 @@
       width: 100%;
     }
   }
+  .task-list-icon {
+    
+  }
   .done-icon {
     filter: invert(30%) sepia(21%) saturate(933%) hue-rotate(100deg)
       brightness(88%) contrast(96%);
