--- a/src/layout/Header.scss
+++ b/src/layout/Header.scss
@@ -74,7 +74,7 @@
   }
 
   .hamberger-icon {
-    width: 2.5rem;
+    width: 2rem;
     display: none;
     img {
       width: 100%;
@@ -106,6 +106,15 @@
 
     .hamberger-icon {
       display: initial;
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .header {
+    .logo {
+      width: 6rem;
+      margin: 0 1rem;
     }
   }
 }
