--- a/src/layout/Navbar.scss
+++ b/src/layout/Navbar.scss
@@ -8,14 +8,15 @@
 }
 
 .navbar {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   background: $main-blue-color;
-  padding: 2rem;
-  width: 20rem;
-  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding:  1rem 2rem;
+  width: 100vw;
   z-index: 10;
+  position: absolute;
+  top: 8rem;
 
   .nav {
     display: flex;
@@ -24,8 +25,8 @@
     margin-bottom: 1rem;
 
     span {
-      font-size: 1.5rem;
-      padding: 1rem 1.5rem;
+      font-size: 1.25rem;
+      padding: 1rem ;
       border-radius: 1rem;
       text-align: right;
       color: white;
@@ -42,18 +43,20 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    align-self: center;
     padding: 1rem;
-    width: 12rem;
+    width: 8rem;
+    height: 4rem;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
       rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 1rem;
     img {
-      width: 1.5rem;
+      width: 1.25rem;
       filter: invert(92%) sepia(100%) saturate(0%) hue-rotate(278deg)
         brightness(104%) contrast(106%);
     }
     p {
-      font-size: 1.5rem;
+      font-size: 1.25rem;
       margin-left: 0.5rem;
       color: white;
     }
