--- a/src/pages/Douaa.scss
+++ b/src/pages/Douaa.scss
@@ -3,12 +3,12 @@
 .douaa {
   display: flex;
   flex-direction: column;
-  align-items: center;
 
   .douaa-heading {
     display: flex;
     align-items: center;
     background-color: white;
+    align-self: center;
     box-shadow: 0px 2px 15px -2px rgb(185 187 198 / 50%);
     border: 1px dashed #dbdbdb;
     border-radius: 1rem;
