--- a/src/pages/Signup.scss
+++ b/src/pages/Signup.scss
@@ -20,6 +20,12 @@
     border-radius: 2rem;
     padding: 4rem;
 
+    h2 {
+      color: $main-blue-color;
+      align-self: center;
+      font-size: 2rem;
+    }
+
     .logo {
       width: 12rem;
       align-self: center;
@@ -67,7 +73,9 @@
     .question {
       display: flex;
       flex-direction: column;
-
+      a {
+        text-decoration: none;
+      }
       p {
         color: $light-gray;
         font-size: 1rem;
@@ -98,6 +106,55 @@
       p {
         color: white;
         font-size: 1.2rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .signup {
+    form {
+      gap: 1rem;
+      padding: 2rem;
+      h2 {
+        font-size: 1.5rem;
+      }
+      border-radius: 0;
+      width: 100vw;
+      height: 100vh;
+
+      .logo {
+        width: 10rem;
+      }
+
+      .text-area {
+        input {
+          width: 20rem;
+        }
+        p {
+          font-size: 1rem;
+        }
+      }
+      .btn {
+        p {
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .signup {
+    form {
+      .logo {
+        width: 8rem;
+      }
+
+      .text-area {
+        input {
+          width: 16rem;
+        }
       }
     }
   }
