--- a/src/pages/Douaa.scss
+++ b/src/pages/Douaa.scss
@@ -3,6 +3,8 @@
 .douaa {
   display: flex;
   flex-direction: column;
+  position: relative;
+  min-height: 100vh;
 
   .douaa-heading {
     display: flex;
