--- a/src/pages/ArkanIslam.scss
+++ b/src/pages/ArkanIslam.scss
@@ -3,10 +3,12 @@
 .arkan-islam {
   display: flex;
   flex-direction: column;
+  position: relative;
+  min-height: 100vh;
 
   .arkan-heading {
     display: flex;
-    align-items: center;
+    align-self: center;
     background-color: white;
     box-shadow: 0px 2px 15px -2px rgb(185 187 198 / 50%);
     border: 1px dashed #dbdbdb;
