--- a/src/components/DouaaCard.scss
+++ b/src/components/DouaaCard.scss
@@ -36,3 +36,16 @@
     }
   }
 }
+
+@media screen and (max-width: 425px) {
+  .douaa-card {
+    .description {
+      .name,.number {
+        font-size: 1rem;
+      }
+      .content {
+        width: 13rem;
+      }
+    }
+  }
+}
