add some annimations and fix some error

--- a/src/components/Task.scss
+++ b/src/components/Task.scss
@@ -22,16 +22,17 @@
 
   .icon-close {
     width: 0.6rem;
-    top: 5px;
-    right: 7px;
+    top: 6px;
+    right: 8px;
     position: absolute;
     display: none;
-    filter: invert(99%) sepia(1%) saturate(1152%) hue-rotate(309deg)
-      brightness(93%) contrast(86%);
+    filter: invert(46%) sepia(69%) saturate(536%) hue-rotate(314deg)
+      brightness(99%) contrast(95%);
 
-      &:hover {
-        cursor: pointer;
-      }
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.5);
+    }
 
     img {
       width: 100%;
@@ -63,6 +64,7 @@
 
     &:hover {
       cursor: pointer;
+      transform: scale(1.25);
     }
 
     img {
