--- a/src/components/DouaaCard.scss
+++ b/src/components/DouaaCard.scss
@@ -12,6 +12,11 @@
   padding: 1rem;
   margin: 1rem;
 
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+
   .description {
     .name,
     .number {
@@ -28,8 +33,8 @@
   }
 
   .image {
-    width: 10;
-    height: 9rem;
+    width: 12rem;
+    height: 10rem;
     img {
       width: 100%;
       height: 100%;
@@ -40,12 +45,18 @@
 @media screen and (max-width: 425px) {
   .douaa-card {
     .description {
-      .name,.number {
+      .name,
+      .number {
         font-size: 1rem;
       }
       .content {
         width: 13rem;
       }
     }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .douaa-card {
   }
 }
