--- a/src/components/RoknCard.scss
+++ b/src/components/RoknCard.scss
@@ -4,13 +4,18 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   box-shadow: 0px 2px 15px -2px rgb(185 187 198 / 50%);
   border: 1px dashed #dbdbdb;
   width: 25rem;
   border-radius: 1rem;
-  padding: 1rem 2.5rem;
+  padding: 1rem;
   margin: 1rem;
+
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
 
   .description {
     .name,
@@ -27,8 +32,8 @@
   }
 
   .image {
-    width: 10;
-    height: 9rem;
+    width: 8rem;
+    height: 10rem;
     img {
       width: 100%;
       height: 100%;
