--- a/src/components/TaskState.scss
+++ b/src/components/TaskState.scss
@@ -35,6 +35,19 @@
   height: 30rem;
   margin: 1rem;
   padding: 1rem;
+  animation: cardAnim 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
+  @keyframes cardAnim {
+    0% {
+      transform: rotateY(-20deg) rotateX(-35deg) translate(-300px, 300px)
+        skew(-35deg, 10deg);
+      opacity: 0;
+    }
+    100% {
+      transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+      opacity: 1;
+    }
+  }
 
   .state-title {
     display: flex;
