--- a/src/pages/Douaa.scss
+++ b/src/pages/Douaa.scss
@@ -14,13 +14,42 @@
     box-shadow: 0px 2px 15px -2px rgb(185 187 198 / 50%);
     border: 1px dashed #dbdbdb;
     border-radius: 1rem;
+    padding: 1rem;
     margin-top: 2rem;
     width: 45rem;
+    animation: headAnim 2s ease-in 0s 1 normal forwards;
+
+    @keyframes headAnim {
+      0% {
+        animation-timing-function: ease-out;
+        transform: scale(1);
+        transform-origin: center center;
+      }
+
+      10% {
+        animation-timing-function: ease-in;
+        transform: scale(0.91);
+      }
+
+      17% {
+        animation-timing-function: ease-out;
+        transform: scale(0.98);
+      }
+
+      33% {
+        animation-timing-function: ease-in;
+        transform: scale(0.87);
+      }
+
+      45% {
+        animation-timing-function: ease-out;
+        transform: scale(1);
+      }
+    }
 
     p {
       line-height: 2.5rem;
       font-size: 1.2rem;
-      padding: 1rem;
       text-align: center;
 
       span {
@@ -45,7 +74,6 @@
   }
 }
 
-
 @media screen and (max-width: 768px) {
   .douaa {
     .douaa-heading {
@@ -61,11 +89,23 @@
 @media screen and (max-width: 425px) {
   .douaa {
     .douaa-heading {
-      width: 25rem;
+      width: 24rem;
       flex-direction: column-reverse;
       .image {
         width: 10rem;
       }
+      p {
+        font-size: 1rem;
+        line-height: 2rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .douaa {
+    .douaa-heading {
+      width: 21rem;
     }
   }
 }
