--- a/src/pages/Signup.scss
+++ b/src/pages/Signup.scss
@@ -47,6 +47,7 @@
 
       p {
         color: $error-dark-color;
+        margin-left: 0.2rem;
       }
     }
 
@@ -63,6 +64,7 @@
 
       p {
         color: $dark-green;
+        margin-left: 0.2rem;
       }
     }
 
