--- a/src/main.scss
+++ b/src/main.scss
@@ -9,6 +9,9 @@
 body {
   font-size: 62.5%;
   font-family: Tajawal, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 $main-blue-color: #45b7d2;
